src/core/status/ui/draw_blocks/snapshots/clikd__core__status__ui__draw_blocks__ports__tests__draw_blocks_ports_custom_colors.snap
---
source: src/core/status/ui/draw_blocks/ports.rs
expression: setup.terminal.backend()
---
"╭─────────── ports ────────────╮"
"│   ip   private   public      │"
"│           8001               │"
"│                              │"
"│                              │"
"│                              │"
"│                              │"
"╰──────────────────────────────╯"
