src/core/status/ui/draw_blocks/snapshots/clikd__core__status__ui__draw_blocks__ports__tests__draw_blocks_ports_multiple_ports.snap
---
source: src/core/status/ui/draw_blocks/ports.rs
expression: setup.terminal.backend()
---
"╭─────────── ports ────────────╮"
"│       ip   private   public  │"
"│               8001           │"
"│               8002           │"
"│127.0.0.1      8003     8003  │"
"│                              │"
"│                              │"
"╰──────────────────────────────╯"
