src/core/status/ui/draw_blocks/snapshots/clikd__core__status__ui__draw_blocks__ports__tests__draw_blocks_ports_no_ports.snap
---
source: src/core/status/ui/draw_blocks/ports.rs
expression: setup.terminal.backend()
---
"╭────────── ports ───────────╮"
"│          no ports          │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"│                            │"
"╰────────────────────────────╯"
